Fix misspelling on form action

--- a/bmiCalculator.html
+++ b/bmiCalculator.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>BMI Calculator</h1>
-    <form action="/bmiCalculator" method="POST">
+    <form action="/bmicalculator" method="POST">
         <input type="text" name="weight" placeholder="Enter weight"/>
         <input type="text" name="height" placeholder="Enter height"/>
         <button>Calculate BMI</button>
